--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Document</title>
+    <title>Pricing Cards</title>
   </head>
   <body>
     <div class="flex items-center justify-center min-h-screen bg-slate-800">
@@ -14,7 +14,7 @@
       >
         <!-- cord 1 -->
         <div
-          class="bg-slate-700 rounded-xl text-white hover:bg-violet-600 duration-200"
+          class="bg-slate-600 rounded-xl text-white hover:bg-violet-500 duration-200"
         >
           <!-- Upper Container -->
           <div class="p-8 mx-3 mt-3 rounded-t-xl bg-slate-800">
@@ -24,7 +24,7 @@
             <div class="flex justify-center">
               <a
                 href="#"
-                class="inline-block px-10 py-3 my-6 text-center border border-violet-600 rounded-lg duration-200 hover:bg-violet-800 hover:border-violet-800"
+                class="inline-block px-10 py-3 my-6 text-center border border-violet-600 rounded-lg duration-200 hover:bg-violet-500 hover:border-violet-800"
                 >Purchase</a
               >
             </div>
@@ -90,7 +90,7 @@
         </div>
         <!-- cord 2 -->
         <div
-          class="bg-violet-400 rounded-xl text-white hover:bg-violet-600 duration-200"
+          class="bg-violet-600 rounded-xl text-white hover:bg-violet-500 duration-200"
         >
           <!-- Upper Container -->
           <div class="p-8 mx-3 mt-3 rounded-t-xl bg-slate-800">
@@ -100,7 +100,7 @@
             <div class="flex justify-center">
               <a
                 href="#"
-                class="inline-block px-10 py-3 my-6 text-center border border-violet-600 rounded-lg duration-200 hover:bg-violet-800 hover:border-violet-800"
+                class="inline-block px-10 py-3 my-6 text-center border border-violet-600 rounded-lg duration-200 bg-violet-800 hover:bg-violet-500 hover:border-violet-800"
                 >Purchase</a
               >
             </div>
@@ -166,7 +166,7 @@
         </div>
         <!-- cord 3 -->
         <div
-          class="bg-slate-700 rounded-xl text-white hover:bg-violet-600 duration-200"
+          class="bg-slate-600 rounded-xl text-white hover:bg-violet-500 duration-200"
         >
           <!-- Upper Container -->
           <div class="p-8 mx-3 mt-3 rounded-t-xl bg-slate-800">
@@ -176,7 +176,7 @@
             <div class="flex justify-center">
               <a
                 href="#"
-                class="inline-block px-10 py-3 my-6 text-center border border-violet-600 rounded-lg duration-200 hover:bg-violet-800 hover:border-violet-800"
+                class="inline-block px-10 py-3 my-6 text-center border border-violet-600 rounded-lg duration-200 hover:bg-violet-500 hover:border-violet-800"
                 >Purchase</a
               >
             </div>
